compiler/testData/diagnostics/testsWithStdLib/properties/backingField/explicitBackingFieldWithJvmField.kt
// RUN_PIPELINE_TILL: FRONTEND

<!INAPPLICABLE_JVM_FIELD!>@JvmField<!>
val it: List<Int>
    field = mutableListOf()

/* GENERATED_FIR_TAGS: explicitBackingField, propertyDeclaration */
